--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -6,8 +6,9 @@
   align-items: ;
   justify-content: space-between;
   background-color: transparent;
-  margin-bottom: 10px;
+  margin: 0;
   border-top: 1px solid rgba(192, 180, 109, 0.113);
+  
 }
 
 .footer-design {
