--- a/src/Components/AboutMe.css
+++ b/src/Components/AboutMe.css
@@ -1,6 +1,7 @@
 .hi {
-  margin-top: 150px;
-  font-size: 45px;
+  margin-top: 100px;
+  font-size: 40px;
+  /* color: #6e6d04; */
 }
 
 .about-container {
