--- a/src/Components/Portfolio.css
+++ b/src/Components/Portfolio.css
@@ -12,12 +12,7 @@
 }
 
 .portfolio-title {
-  font-size: 45px;
-    /* background: -webkit-linear-gradient(white, rgb(250, 231, 218));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    margin-bottom: 4rem; */
-  color: white;
+  font-size: 30px;
 }
 
 .under-construction {
@@ -26,23 +21,21 @@
   color: rgb(255, 196, 2);
 }
 
-.projects-grid {
+.projects-grid-open {
   display: grid;
-  width: 70%;
+  width: 80%;
   height: 100%;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  /* grid-template-rows: repeat(auto-fit, minmax(25rem, 1fr, 1fr)); */
+  grid-template-columns: 22rem 22rem 22rem;
   /* grid-template-rows: 1fr 1fr; */
-  /* grid-template-columns: repeat(auto-fit, minmax(1fr, 1fr)); */
-  /* grid-template-rows: 1fr 1fr; */
-  grid-gap: 5rem;
+  grid-gap: 10px;
   align-items: center;
   justify-content: center;
-  /* margin-bottom: 6rem; */
 }
 
 /* @media screen and (max-width: 1000) */
 
-@media screen and (max-width: 1300px) {
+/* @media screen and (max-width: 1300px) {
   .projects-grid {
     width: 50%;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
@@ -54,5 +47,5 @@
     width: 90%;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   }
-}
+} */
 
