--- a/src/Components/ProjectTileStyles.css
+++ b/src/Components/ProjectTileStyles.css
@@ -24,6 +24,14 @@
   /* backface-visibility: hidden; */
 }
 
+.project-image-side{
+  height: 150px;
+  width: 100%;
+  overflow: hidden;
+  transition: .5s ease;
+  opacity: 1;
+}
+
 .project-overlay-info {
   /* font-size: 20px; */
 }
