--- a/src/Components/Portfolio.css
+++ b/src/Components/Portfolio.css
@@ -1,11 +1,12 @@
 .portfolio-cont {
   position: relative;
-  margin-top: 100px;
+  margin-top: 10px;
   height: 100%;
 
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
   color: white;
   margin-bottom: 2rem;
@@ -13,6 +14,7 @@
 
 .portfolio-title {
   font-size: 30px;
+  margin-top: 130px;
 }
 
 .under-construction {
@@ -42,6 +44,11 @@
   grid-gap: 10px;
   align-items: center;
   justify-content: center;
+}
+
+.thanks {
+  font-size: 22px;
+  margin: 3rem 0 6rem 0;
 }
 
 /* @media screen and (max-width: 1000) */
