--- a/src/Components/Portfolio.css
+++ b/src/Components/Portfolio.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   color: white;
   margin-bottom: 2rem;
 }
@@ -39,11 +39,26 @@
   display: grid;
   width: 30%;
   height: 100%;
-  grid-template-columns: 22rem ;
+  grid-template-columns: 18rem ;
   /* grid-template-rows: 1fr 1fr; */
   grid-gap: 10px;
   align-items: center;
   justify-content: center;
+}
+
+.view-grid-button{
+  color: white;
+  padding: 3px 8px 3px 8px;
+  border: 1px solid rgba(255, 255, 255, 0.752);
+  border-radius: 3px;
+  width: 70%;
+  height: 20px;
+  text-align: center;
+  margin: 0;
+  cursor: pointer;
+  display: none;
+  justify-self: center;
+
 }
 
 .thanks {
