--- a/src/Components/ProjectTileStyles.css
+++ b/src/Components/ProjectTileStyles.css
@@ -25,7 +25,7 @@
 }
 
 .project-image-side{
-  height: 160px;
+  height: 130px;
   width: 100%;
   overflow: hidden;
   transition: .5s ease;
@@ -38,7 +38,7 @@
 
 .project-overlay {
   opacity: 0;
-  transition-duration: 2s;
+  transition-duration: 600ms;
   position: absolute;
   height: 100%;
   width: 100%;
@@ -50,6 +50,26 @@
   background: linear-gradient(rgba(83, 48, 139, 0.568), rgba(24, 64, 70, 0.534));
 }
 
+.project-overlay-side {
+  opacity: 0;
+  z-index: 10;
+  transition-duration: 600ms;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(rgba(83, 48, 139, 0.968), rgba(24, 64, 70, 0.934));
+  color: white;
+  /* background-color: rgba(0, 0, 0, 0.733); */
+  border: 1px solid white;
+  font-weight: 900;
+}
+
+
 .learn-button {
   border: 1px solid rgba(255, 255, 255, 0.548);
   background-color: transparent;
@@ -57,9 +77,10 @@
   font-weight: 100;
   padding: 5px 10px 5px 10px;
   cursor: pointer;
+  margin-top: 10px;
 }
 
-.project-tile-cont:hover .project-overlay{
+.project-tile-cont:hover .project-overlay, .project-tile-cont:hover .project-overlay-side{
   opacity: 1;
 }
 
