--- a/src/Components/Portfolio.css
+++ b/src/Components/Portfolio.css
@@ -6,7 +6,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   /* align-items: center; */
   color: white;
   margin-bottom: 2rem;
@@ -14,13 +14,14 @@
 
 .portfolio-title {
   font-size: 30px;
-  margin-top: 130px;
+  margin-top: 100px;
 }
 
 .under-construction {
   font-size: 20px;
-  padding-bottom: 40px;
+  padding-bottom: 30px;
   color: rgb(255, 196, 2);
+  margin: 0;
 }
 
 .projects-grid-open {
@@ -37,13 +38,14 @@
 
 .projects-grid-side {
   display: grid;
-  width: 30%;
+  width: 15%;
   height: 100%;
-  grid-template-columns: 18rem ;
+  grid-template-columns: 12rem ;
   /* grid-template-rows: 1fr 1fr; */
   grid-gap: 10px;
   align-items: center;
   justify-content: center;
+  margin: -100px 0 0 0;
 }
 
 .view-grid-button{
