--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,14 @@
 .App {
   text-align: center;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   scroll-behavior: smooth;
   margin: 0;
+  /* padding-top: 65px; */
 }
 
 ::-webkit-scrollbar {
