--- a/src/Components/AboutMe.css
+++ b/src/Components/AboutMe.css
@@ -5,11 +5,13 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin: 15rem 0 10rem 0;
+  margin: 0;
+  top: 0;
+  bottom: 0;
+  padding: 5rem 0 10rem 0;
 }
 
 .hi {
-  margin-top: 100px;
   font-size: 35px;
   /* color: #6e6d04; */
 }
@@ -46,6 +48,36 @@
 .about-paragraph span {
   color: rgba(255, 217, 0, 0.801);
   font-weight: 1000;
+}
+
+/* Twinkles */
+@keyframes move-twinkle-back {
+  from { background-position: 0 0; }
+  to { background-position: -1000px 5000px; }
+}
+
+ .twinkling, .stars {
+  position: absolute;
+  top: 0; 
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.stars {
+  background: rgb(0, 0, 0) url(/src/assets/images/other-images/stars.png);
+  z-index: -2;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.twinkling {
+  background: transparent url(/src/assets/images/other-images/twinkling.png);
+  z-index: -1;
+  animation: move-twinkle-back 180s linear infinite;
+  background-attachment: fixed;
 }
 
 @media screen and (max-width: 1100px) {
