--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -8,7 +8,7 @@
   border-top: 1px solid rgba(160, 150, 92, 0.256);
   font-size: 20px;
   color: white;
-  /* position: absolute; */
+  position: absolute;
   bottom: 0;
 }
 
