--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -15,9 +15,6 @@ nav{
   background-color: rgba(0, 0, 0, 0.896);
 }
 
-.menu-item {
-  color: rgb(255, 255, 255);
-}
 
 .menu-div {
   display: flex;
@@ -26,16 +23,8 @@ nav{
   max-width: 650px;
 }
 
-.lb-logo {
-  margin-left: 50px;
-  font-size: 23px;
-  font-weight: 800;
-  color: rgba(255, 217, 0, 0.728);
-}
 
-.underlined {
-  
-}
+
 
 .menu-dd {
   display: flex;
@@ -46,6 +35,25 @@ nav{
   animation: growDown 330ms ease-in-out ;
   transform-origin: right ;
   transition: animation 0s 500ms, opacity 300ms linear;
+}
+
+.menu-item {
+  color: white;
+  font-weight: 600;
+  margin-right: 3rem;
+  
+}
+
+.active {
+  color: gold;
+  border-bottom: 2px solid gold;
+}
+
+.lb-logo {
+  margin-left: 50px;
+  font-size: 25px;
+  font-weight: 800;
+  color: rgba(255, 217, 0, 0.728);
 }
 
 .hidden {
@@ -83,9 +91,6 @@ nav{
   }
 } */
 
-.navLink {
-  padding-right: 3rem;
-}
 
 #x {
   font-weight: 900;
@@ -107,6 +112,8 @@ nav{
     -webkit-background-clip: text;
     -webkit-text-fill-color: white; */
 }
+
+/* hover underline fill animation */
 
 .ellipsis:hover {
   animation: jiggle .3s ease-in-out ;
@@ -172,16 +179,10 @@ nav{
     }
   }
 
-  .navLink{
-    padding:0;
-    justify-self: end;
-    text-align: right;
-    /* background: rgba(0, 0, 0, 0.95); */
-  }
-  #x {
-    margin: 0;
-    text-align: right;
-  }
+
+
+
+ 
   /* nav.active {
     background-color: rgba(0, 0, 0, 0.95);
   } */
