--- a/src/Components/AboutMe.css
+++ b/src/Components/AboutMe.css
@@ -1,3 +1,7 @@
+
+
+/* About Section */
+
 .about-container {
   height: 100%;
   width: 75%;
@@ -50,35 +54,7 @@
   font-weight: 1000;
 }
 
-/* Twinkles */
-@keyframes move-twinkle-back {
-  from { background-position: 0 0; }
-  to { background-position: -1000px 5000px; }
-}
 
- .twinkling, .stars {
-  position: absolute;
-  top: 0; 
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.stars {
-  background: rgb(0, 0, 0) url(/src/assets/images/other-images/stars.png);
-  z-index: -2;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.twinkling {
-  background: transparent url(/src/assets/images/other-images/twinkling.png);
-  z-index: -1;
-  animation: move-twinkle-back 180s linear infinite;
-  background-attachment: fixed;
-}
 
 @media screen and (max-width: 1100px) {
   .about-container{
@@ -125,4 +101,34 @@
     width: 85%;
     font-size: 20px;
   }
+}
+
+/* Twinkles */
+@keyframes move-twinkle-back {
+  from { background-position: 0 0; }
+  to { background-position: -1000px 5000px; }
+}
+
+ .twinkling, .stars {
+  position: absolute;
+  top: 0; 
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.stars {
+  background: rgb(0, 0, 0) url(/src/assets/images/other-images/stars.png);
+  z-index: -2;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.twinkling {
+  background: transparent url(/src/assets/images/other-images/twinkling.png);
+  z-index: -1;
+  animation: move-twinkle-back 180s linear infinite;
+  background-attachment: fixed;
 }
