Adjusted Font for Projects section when viewed in larger screen

--- a/src/Components/projectsSection.css
+++ b/src/Components/projectsSection.css
@@ -79,6 +79,12 @@ a {
 } */
 
 
+@media screen and (min-width: 1850px) {
+  .project-description p {
+    font-size: 25px;
+  }
+}
+
 @media screen and (max-width: 1150px) {
 
   .project-title {
