Finally got project CSS to look right.
Also added and adjusted a few things to the Project section.
ie: buttons that lead to repos or to projects.

--- a/src/Components/Graph.css
+++ b/src/Components/Graph.css
@@ -1,9 +1,10 @@
 .graph-cont {
-  width: 95%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: -2rem;
+  justify-content: center;
+  margin-left: -1rem;
 }
 
 .graph-title {
