--- a/src/Components/projectsSection.css
+++ b/src/Components/projectsSection.css
@@ -2,6 +2,9 @@
   width: 80%;
   text-align: left;
   padding: 0;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 /* .project-title {
@@ -16,12 +19,12 @@
   height: 100%;
   width: 100%;
   /* margin-bottom: 8rem; */
-  padding-bottom: 8rem;
+  padding-bottom: 1rem;
   /* border-bottom: 1px solid rgba(255, 255, 255, 0.788); */
 }
 
 .project-title {
-  margin: 0 0 0 72px;
+  margin: 0 0 3rem 0;
   font-size: 28px;
 }
 
@@ -29,31 +32,58 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  /* width: 100%; */
+  min-height: 100%;
+  
 }
 
 .project-description {
-  padding: 0;
   width: 35%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
 .project-description p {
-  font-size: 18px;
+  font-size: 19px;
+  
 }
 
 a {
   color: gold;
   text-decoration: none;
-  cursor: pointer;
+  font-size: 20px;
+}
+
+.project-description a {
+  border: 1px solid gold;
+  border-radius: 3px;
+  width: 200px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  align-self: center;
+}
+
+.project-description a:hover {
+  border: 1px solid black;
+  color: black;
+  background-color: rgba(218, 190, 32, 0.863);
+  font-weight: 900;
 }
 
 .project-media-cont {
-  padding-top: 33px;
   width: 35%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
+  /* margin-top: 4rem; */
+}
+
+.tools {
+  text-justify: center;
+  margin-bottom: 5rem;
 }
 
 .carousel {
