--- a/src/Components/ProjectTileStyles.css
+++ b/src/Components/ProjectTileStyles.css
@@ -5,7 +5,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   text-decoration: none;
   background-position: center;
