--- a/src/Pages/projectsSection.css
+++ b/src/Pages/projectsSection.css
@@ -56,7 +56,7 @@ a {
 
 .project-description a {
   border: 1px solid gold;
-  border-radius: 3px;
+  border-radius: 30px;
   width: 200px;
   height: 30px;
   display: flex;
@@ -64,6 +64,8 @@ a {
   justify-content: center;
   font-size: 18px;
   align-self: center;
+  font-weight: 800;
+  transition: 500ms ease;
 }
 
 .project-description a:hover {
