--- a/src/Components/blurb.css
+++ b/src/Components/blurb.css
@@ -29,10 +29,12 @@
   }
   .blurb-img {
     width: 300px;
+    height: 300px;
     margin-bottom: 50px;
   }
   .blurb-p {
     margin-bottom: 80px;
+    font-size: 22px;
   }
 }     
 
@@ -49,5 +51,6 @@
   }
   .blurb-img {
     width: 250px;
+    height: 250px;
   }
 }
