Projects Section Grid and projects

--- a/src/Pages/Portfolio.css
+++ b/src/Pages/Portfolio.css
@@ -3,23 +3,30 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 90vh;
+  min-height: 100%;
+  width: 100%;
 }
 
 .projects-cont {
-  /* position: relative; */
   margin-top: 10px;
   min-height: 100%;
   width: 100%;
   display: flex;
   flex-direction: row;
-  /* align-items: center; */
   justify-content: center;
-  /* align-items: center; */
-  /* align-items: center; */
   color: white;
   margin-bottom: 2rem;
+
 }
+
+@media screen and (max-width: 1150px) {
+  .projects-cont {
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+  }
+}
+
 
 .portfolio-title {
   font-size: 35px;
@@ -36,15 +43,30 @@
   display: grid;
   width: 80%;
   height: 100%;
-  /* grid-template-rows: repeat(auto-fit, minmax(25rem, 1fr, 1fr)); */
+
   grid-template-columns: repeat(3, 20rem);
-  /* grid-template-rows: 1fr 1fr; */
-  grid-gap: 15px;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 16px;
   align-items: center;
   justify-content: center;
 }
 
-.projects-grid-side {
+@media screen and (max-width: 1150px) {
+  .projects-grid-open {
+    grid-template-columns: repeat(2, 20rem);
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+  
+}
+
+@media screen and (max-width: 800px) {
+  .projects-grid-open {
+    width: 50%;
+    grid-template-columns: repeat(1, 20rem);
+  }
+
+}
+.projects-grid-small {
   display: grid;
   width: 15%;
   height: 100%;
@@ -54,6 +76,22 @@
   align-items: center;
   justify-content: center;
   margin: 0px 0 0 0;
+}
+
+@media screen and (max-width: 1150px) {
+  .projects-grid-small{
+    /* grid-template-columns: repeat(6, 12rem); */
+    display: flex;
+    width: 75%;
+    overflow: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none ;
+    margin-bottom: 5rem;
+  }
+  .projects-grid-small::-webkit-scrollbar {
+    display: none;
+  }
+
 }
 
 .view-grid-button{
@@ -73,22 +111,15 @@
 
 
 .thanks {
+  width: 50%;
   font-size: 22px;
   margin: 3rem 0 6rem 0;
+  font-size: 1.5rem;
+  /* display: flex; */
 }
 
-/* @media screen and (max-width: 1000) */
-
-/* @media screen and (max-width: 1300px) {
-  .projects-grid {
-    width: 50%;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+@media screen and (max-width: 500px) {
+  .thanks {
+    font-size: 18px;
   }
 }
-
-@media screen and (max-width: 600px) {
-  .projects-grid {
-    width: 90%;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-  }
-} */
