--- a/src/Pages/Portfolio.css
+++ b/src/Pages/Portfolio.css
@@ -1,3 +1,4 @@
+
 .portfolio-cont {
   display: flex;
   flex-direction: column;
@@ -10,7 +11,7 @@
 .projects-cont {
   margin-top: 10px;
   min-height: 100%;
-  width: 100%;
+  width: 97%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -70,44 +71,52 @@
   width: 15%;
   height: 100%;
   grid-template-columns: 12rem ;
-  /* grid-template-rows: 1fr 1fr; */
   grid-gap: 10px;
   align-items: center;
-  justify-content: center;
-  margin: 0px 0 0 0;
+  /* justify-content: center; */
+  /* JUSTIFY CONTENT MAKES IT SO OVERFLOW X SCROLL DOES NOT WORK AND HIDES SOME OF THE CONTENT */
+  margin: 0 0 0 0;
 }
 
 @media screen and (max-width: 1150px) {
   .projects-grid-small{
-    grid-template-columns: repeat(6, 10rem);
+    width: 100%;
+    height: 100%;
+    margin-bottom: 5rem;
+    grid-gap: 10px;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 1fr;
+  }
+}
+
+@media screen and (max-width: 980px) {
+  .projects-grid-small{
     display: grid;
     width: 100%;
+    height: 100%;
+    grid-template-columns: repeat(6, 180px) ;
+    grid-gap: 20px;
     overflow-x: auto;
-    -ms-overflow-style: none;
-    scrollbar-width: none ;
-    margin-bottom: 5rem;
+    overflow-y: visible;
+    scroll-snap-type: x proximity;
   }
   .projects-grid-small::-webkit-scrollbar {
-    display: ;
+    display: none;
   }
-
 }
 
-.view-grid-button{
-  color: white;
-  padding: 3px 8px 3px 8px;
-  border: 2px solid rgba(255, 255, 255, 0.752);
-  border-radius: 3px;
-  width: 70%;
-  height: 20px;
-  text-align: center;
-  margin: 0;
-  cursor: pointer;
-  display: none;
-  justify-self: center;
+@media screen and (max-width: 808px) {
+  .projects-grid-small {
+    width: 100%;
+    grid-template-columns: repeat(6, 125px);
+  }
 }
 
-
+@media screen and (max-width: 600px) {
+  .projects-grid-small{
+    grid-template-columns: repeat(6, 90px)
+  }
+}
 
 .thanks {
   width: 50%;
@@ -126,4 +135,8 @@
 /* Carousel */
 .projects-carousel {
   height: 200px;
+}
+
+.projects-carousel {
+  /* height: 80px; */
 }
