--- a/src/Pages/ProjectTileStyles.css
+++ b/src/Pages/ProjectTileStyles.css
@@ -20,8 +20,8 @@
 .project-tile-cont-smoll {
   background: linear-gradient(rgba(53, 1, 138, 0.568), rgba(0, 47, 53, 0.534));
   /* border: 3px solid rgba(64, 253, 216, 0.657); */
-  height: 100%;
-  width: 100%;
+  height: 90%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -116,6 +116,7 @@
 }
 
 
+
 #tile-name:hover {
   transform: scale(1.05);
   color: gold;
@@ -135,7 +136,7 @@
 
 .project-overlay-info {
   width: 100%;
-}
+} 
 
  h4 {
   font-size: 30px;
@@ -165,7 +166,7 @@ h4:hover {
 @media screen and (max-width: 980px) {
   .project-tile-cont-smoll {
     border-radius: 50%;
-    border: 5px solid magenta;
+    border: 5px solid goldenrod;
     scroll-snap-align: center;
     
   }
@@ -173,10 +174,25 @@ h4:hover {
   #tile-name{
     font-size: 1rem !important;
   }
+ @media screen and (max-width: 808px) {
+  .project-tile-cont-smoll {
+    border: 4px solid goldenrod;
+  }
+  #tile-name {
+    margin-top: 10px;
+    font-size: 12px !important;
+    width: 90%;
+    /* height: 110%; */
+  }
+  .project-overlay-side {
+    /* top: 0; */
+    margin: 0;
+  }
+ }
 
   .project-overlay-side{
-    /* opacity: 1; */
-    /* background-color: transparent; */
+    opacity: 0;
+    background-color: transparent;
   }
   .project-image-side{
     border-radius: 50%;
